pe/2017.3/component_versions_in_recent_pe_releases.md
# Component versions in recent PE releases

This is a historical overview of which components are in Puppet Enterprise \(PE\) 2017 versions. It includes versions before the releases documented in this set of docs.

## Puppet Enterprise 2017.x

This table shows the components installed on all agent nodes.

**Note:** Hiera 5 is a backwards-compatible evolution of Hiera, which is built into Puppet 4.9.0 and higher. To provide some backwards-compatible features, it uses the classic Hiera 3.x.x codebase version listed in this table.

|PE Version|Puppet Agent|Puppet|Facter|Hiera|MCollective|Ruby|OpenSSL|
|----------|------------|------|------|-----|-----------|----|-------|
|2017.3.10|5.3.8|5.3.7|3.9.6|3.4.3|2.11.5|2.4.4|1.0.2n|
|2017.3.9|5.3.8|5.3.7|3.9.6|3.4.3|2.11.5|2.4.4|1.0.2n|
|2017.3.8|5.3.8|5.3.7|3.9.6|3.4.3|2.11.5|2.4.4|1.0.2n|
|2017.3.6|5.3.6|5.3.6|3.9.6|3.4.3|2.11.5|2.4.4|1.0.2n|
|2017.3.5|5.3.5|5.3.5|3.9.5|3.4.2|2.11.4|2.4.3|1.0.2n|
|2017.3.4|5.3.4|5.3.4|3.9.4|3.4.2|2.11.4|2.4.3|1.0.2n|
|2017.3.2|5.3.3|5.3.3|3.9.3|3.4.2|2.11.4|2.4.2|1.0.2k|
|2017.3.1|5.3.2|5.3.2|3.9.2|3.4.2|2.11.3|2.4.1|1.0.2k|
|2017.3.0|5.3.2|5.3.2|3.9.2|3.4.2|2.11.3|2.4.1|1.0.2k|
|2017.2.5|1.10.9|4.10.9|3.6.8|3.3.2|2.10.6|2.1.9|1.0.2k|
|2017.2.4|1.10.8|4.10.8|3.6.7|3.3.2|2.10.5|2.1.9|1.0.2k|
|2017.2.3|1.10.5|4.10.5|3.6.6|3.3.2|2.10.5|2.1.9|1.0.2k|
|2017.2.2|1.10.4|4.10.4|3.6.5|3.3.2|2.10.5|2.1.9|1.0.2k|
|2017.2.1|1.10.1|4.10.1|3.6.4|3.3.1|2.10.4|2.1.9|1.0.2k|
|2017.1.1|1.9.3|4.9.4|3.6.2|3.3.1|2.9.0|2.1.9|1.0.2j|
|2017.1.1 for Ubuntu on i386|1.7.0|4.7.0|3.4.1|3.2.1|2.10.2|2.1.9|1.0.2h|
|2017.1.0|1.9.3|4.9.4|3.6.2|3.3.1|2.9.0|2.1.9|1.0.2j|
|2017.1.0 for Ubuntu on i386|1.7.0|4.7.0|3.4.1|3.2.1|2.10.2|2.1.9|1.0.2h|
|2016.5.2|1.8.3|4.8.2|3.5.1|3.2.2|2.9.1|2.1.9|1.0.2j|
|2016.5.2 for Ubuntu on i386|1.7.0|4.7.0|3.4.1|3.2.1|2.9.0|2.1.9|1.0.2h|
|2016.5.1|1.8.2|4.8.1|3.5.0|3.2.2|2.9.1|2.1.9|1.0.2j|
|2016.5.1 for Ubuntu on i386|1.7.0|4.7.0|3.4.1|3.2.1|2.9.0|2.1.9|1.0.2h|
|2016.4.15 \(LTS\)|1.10.14|4.10.12|3.6.10|3.3.3|2.10.6|2.1.9|1.0.2n|
|2016.4.14|1.10.14|4.10.12|3.6.10|3.3.3|2.10.6|2.1.9|1.0.2n|
|2016.4.13|1.10.14|4.10.12|3.6.10|3.3.3|2.10.6|2.1.9|1.0.2n|
|2016.4.11|1.10.12|4.10.11|3.6.10|3.3.3|2.10.6|2.1.9|1.0.2n|
|2016.4.10|1.10.10|4.10.10|3.6.9|­|2.10.6|2.1.9|1.0.2n|
|2016.4.9|1.10.9|4.10.9|3.6.8|­|2.10.6|2.1.9|1.0.2k|
|2016.4.8|1.10.8|4.10.8|3.6.7|­|2.10.5|2.1.9|1.0.2k|
|2016.4.7|1.10.5|4.10.5|3.6.6|­|2.10.5|2.1.9|1.0.2k|
|2016.4.6|1.10.4|4.10.4|3.6.5|­|2.10.5|2.1.9|1.0.2k|
|2016.4.5|1.10.1|4.10.1|3.6.4|­|2.10.4|2.1.9|1.0.2k|
|2016.4.3|1.7.2|4.7.1|3.4.2|3.2.2|2.9.1|2.1.9|1.0.2j|
|2016.4.3 for Ubuntu on i386|1.7.1|4.7.0|3.4.1|3.2.1|2.9.0|2.1.9|1.0.2j|
|2016.4.2|1.7.1|4.7.0|3.4.1|3.2.1|2.9.0|2.1.9|1.0.2j|
|2016.4.0|1.7.1|4.7.0|3.4.1|3.2.1|2.9.0|2.1.9|1.0.2j|

This table shows components installed on server nodes:

|PE Version|Puppet Server|PuppetDB|r10k|Razor Server|Razor Libs|PostgreSQL|Java|ActiveMQ|Nginx|
|----------|-------------|--------|----|------------|----------|----------|----|--------|-----|
|2017.3.10|5.1.6|5.1.5|2.6.0|1.6.0|3.1.2|9.6.10|1.8.0|5.15.3|1.14.0|
|2017.3.9|5.1.6|5.1.5|2.6.0|1.6.0|3.1.2|9.6.8|1.8.0|5.15.3|1.14.0|
|2017.3.8|5.1.6|5.1.5|2.6.0|1.6.0|3.1.2|9.6.8|1.8.0|5.15.3|1.12.1|
|2017.3.6|5.1.6|5.1.5|2.6.0|1.6.0|3.1.2|9.6.8|1.8.0|5.15.3|1.12.1|
|2017.3.5|5.1.6|5.1.4|2.6.0|1.6.0|3.1.2|9.6.6|1.8.0|5.14.3|1.12.1|
|2017.3.4|5.1.5|5.1.4|2.6.0|1.6.0|3.1.2|9.6.6|1.8.0|5.14.3|1.12.1|
|2017.3.2|5.1.4|5.1.3|2.5.5|1.6.0|3.1.2|9.6.5|1.8.0|5.14.3|1.12.1|
|2017.3.1|5.1.3|5.1.1|2.5.5|1.6.0|3.1.2|9.6.5|1.8.0|5.14.3|1.12.1|
|2017.3.0|5.1.3|5.1.1|2.5.5|1.6.0|3.1.2|9.6.5|1.8.0|5.14.3|1.12.1|
|2017.2.5|2.8.0|4.4.2|2.5.5|1.6.0|3.1.2|9.4.14|1.8.0|5.14.3|1.12.1|
|2017.2.4|2.8.0|4.4.2|2.5.5|1.6.0|3.1.2|9.4.14|1.8.0|5.14.3|1.12.1|
|2017.2.3|2.7.2|4.4.1|2.5.5|1.6.0|3.1.2|9.4.12|1.8.0|5.14.3|1.12.1|
|2017.2.2|2.7.2|4.4.1|2.5.5|1.6.0|3.1.2|9.4.12|1.8.0|5.14.3|1.10.2|
|2017.2.1|2.7.2|4.4.0|2.5.4|1.6.0|3.1.2|9.4.10|1.8.0|5.14.3|1.10.2|
|2017.1.1|2.7.2|4.3.2|2.5.1|1.5.0|3.1.2|9.4.10|1.8.0|5.14.3|1.10.2|
|2017.1.0|2.7.2|4.3.2|2.5.1|1.5.0|3.1.2|9.4.10|1.8.0|5.14.3|1.10.2|
|2016.5.2|2.6.0|4.2.5|2.5.0|1.5.0|3.1.2|9.4.9|1.8.0|5.14.3|1.8.1|
|2016.5.1|2.6.0|4.2.5|2.5.0|1.5.0|3.1.2|9.4.9|1.8.0|5.13.2|1.8.1|
|2016.4.15 \(LTS\)|2.6.1|4.2.3|2.5.5|1.4.0|3.1.2|9.4.19|1.8.0|5.15.3|1.14.0|
|2016.4.14|2.6.1|4.2.3|2.5.5|1.4.0|3.1.2|9.4.17|1.8.0|5.15.3|1.14.0|
|2016.4.13|2.6.1|4.2.3|2.5.5|1.4.0|3.1.2|9.4.17|1.8.0|5.15.3|1.12.1|
|2016.4.11|2.6.1|4.2.3|2.5.5|1.4.0|3.1.2|9.4.17|1.8.0|5.14.3|1.12.1|
|2016.4.10|2.6.1|4.2.3|2.5.5|1.4.0|3.1.2|9.4.15|1.8.0|5.14.3|1.12.1|
|2016.4.9|2.6.0|4.2.3|2.5.5|1.4.0|3.1.2|9.4.14|1.8.0|5.14.3|1.12.1|
|2016.4.8|2.6.0|4.2.3|2.5.5|1.4.0|3.1.2|9.4.14|1.8.0|5.14.3|1.12.1|
|2016.4.7|2.6.0|4.2.3|2.5.5|1.4.0|3.1.2|9.4.12|1.8.0|5.14.3|1.12.1|
|2016.4.6|2.6.0|4.2.3|2.5.5|1.4.0|3.1.2|9.4.12|1.8.0|5.14.3|1.8.1|
|2016.4.5|2.6.0|4.2.3|2.5.4|1.4.0|3.1.2|9.4.9|1.8.0|5.14.3|1.8.1|
|2016.4.3|2.6.0|4.2.3|2.4.5|1.4.0|3.1.2|9.4.9|1.8.0|5.14.3|1.8.1|
|2016.4.2|2.6.0|4.2.3|2.4.3|1.4.0|3.1.2|9.4.9|1.8.0|5.13.2|1.8.1|
|2016.4.0|2.6.0|4.2.3|2.4.3|1.4.0|3.1.2|9.4.9|1.8.0|5.13.2|1.8.1|

